# oyin_backend

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_product_description.py  0003_alter_product_description.py  0004_advertbanner_created_at_advertbanner_updated_at_and_more.py  0005_product_discount_price.py  0006_alter_product_description.py
oyin_backend/: asgi.py  settings.py  urls.py  wsgi.py
